--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "aframe": "^0.6.0",
-    "aframe-orbit-controls-component-2": "file:aframe-orbit-controls-component-2",
+    "aframe-orbit-controls-component-2": "^0.1.9",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
